--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
-    "check-debug": "grep-cli \"console.log\\|debugger\\|console.debug\" --files-with-matches \"**/*.{js,jsx,ts,tsx}\""
-
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "grep-cli": "^0.2.1",
-    "husky": "^9.1.7"
+    "husky": "^9.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   }
 }
